Archive2/96/211d436dcf0388/output
main.cpp:24:16: error: invalid operands to binary expression ('TestPair' and 'TestPair')
    TestPair() < TestPair(); // error
    ~~~~~~~~~~ ^ ~~~~~~~~~~
1 error generated.
